<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Turbo LauncherEX</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">Folder</string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format" translatable="false">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_landcenter">Landscaping center</string>
    <string name="menu_editor">Press editor</string>
    <string name="menu_desktopsetting">Preferences</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="custom_workspace_cling_title_1"></string>
    <string name="custom_workspace_cling_description_1"></string>
    <string name="custom_workspace_cling_title_2"></string>
    <string name="custom_workspace_cling_description_2"></string>
    <string name="de_tab_title_add">Add</string>
    <string name="de_tab_title_theme">Theme</string>
    <string name="de_tab_title_wallpaper">Wallpaper</string>
    <string name="de_tab_title_effect">Effect</string>
    <string name="de_option_widget_text">Widgets</string>
    <string name="de_option_shortcut_text">Shortcuts</string>
    <string name="de_option_app_text">Apps</string>
    <string name="de_option_folder_text">Folder</string>
    <string name="de_hot_themes_text">Hot themes</string>
    <string name="de_default_theme_text">Default theme</string>
    <string name="de_hot_wallpapers_text">Hot wallpapers</string>
    <string name="de_photos_wallpapers_text">Wallpaper</string>
    <string name="hotseat_title_0">Phone</string>
    <string name="hotseat_title_1">Contacts</string>
    <string name="hotseat_title_2">Message</string>
    <string name="hotseat_title_3">Browser</string>
    <string name="virtual_icon_themebox">Theme</string>
    <string name="virtual_icon_wallpaper">Wallpaper</string>
    <string name="ds_logoname">Preferences</string>
    <string name="ds_setdefaultlaucher">Set as default laucher</string>
    <string name="ds_basicsettings">Basic settings</string>
    <string name="ds_basicsettings_screen">Screen</string>
    <string name="ds_about_privacy_notice">Privacy Notice</string>
    <string name="ds_privacy_notice_text">The system permissions we used does not disclose your private information, in order togive you more confidence to use Turbo Launcher ,we write this statement to describes how we use these permissions.</string>
    <string name="ds_pn_1">Device &amp; app history</string>
    <string name="ds_pn_1_detail">Record the used history of those applications, so we can show you the recently used applications more quickly.</string>
    <string name="ds_pn_2">Mobile data settings</string>
    <string name="ds_pn_2_detail">We used this function in network switches on dock bar.</string>
    <string name="ds_pn_3">Contacts / Calendar</string>
    <string name="ds_pn_3_detail">This permission will be used when you add contact shortcut on the launcher.
      Calendar widget will read the schedule, and displayed in the calendar widget and facilitate access you to view.</string>
    <string name="ds_pn_4">Location</string>
    <string name="ds_pn_4_detail">We used this function in GPS positioning on dock bar.</string>
    <string name="ds_pn_5">Phone</string>
    <string name="ds_pn_5_detail">With this function, you can click to dial contactsdirectly when you add contacts shortcuts on desktop.</string>
    <string name="ds_pn_6">Photos / Media / Files </string>
    <string name="ds_pn_6_detail">This permission is used to start the installation on SD card to store applications and wallpaper. They are the basic functions of Android launcher.</string>
    <string name="ds_pn_7">Wi-Fi connection information</string>
    <string name="ds_pn_7_detail">We used this function in .Wi-Fi switch on dock bar.</string>
    <string name="ds_pn_8">Device ID &amp; call information</string>
    <string name="ds_pn_8_detail">In order to provide user a better product, we use this permission to collect some data for analyze the user experience, such as: What kind of wallpaper you like best.</string>
    <string name="ds_pn_9">Other</string>
    <string name="ds_pn_9_1">access check-in properties</string>
    <string name="ds_pn_9_2">adjust your wallpaper size</string>
    <string name="ds_pn_9_3">choose widgets</string>
    <string name="ds_pn_9_4">access SurfaceFlinger</string>
    <string name="ds_pn_9_5">view network connections</string>
    <string name="ds_pn_9_6">connect and disconnect from Wi-Fi</string>
    <string name="ds_pn_9_7">mock location sources for testing</string>
    <string name="ds_pn_9_8">prevent device from sleeping</string>
    <string name="ds_pn_9_9">pair with Bluetooth devices</string>
    <string name="ds_pn_9_10">access Bluetooth settings</string>
    <string name="ds_pn_9_11">expand/collapse status bar</string>
    <string name="ds_pn_9_12">set wallpaper</string>
    <string name="ds_pn_9_13">control vibration</string>
    <string name="ds_pn_9_14">modify system settings</string>
    <string name="ds_pn_9_15">full network access</string>
    <string name="ds_pn_9_16">close other apps</string>
    <string name="ds_pn_9_17">change network connectivity</string>
    <string name="ds_pn_9_18">send sticky broadcast</string>
    <string name="ds_pn_end"> We use these permissions offers many useful functions , such as shortcuts bar, clock, calendar and a key clean-up and so on.</string>
</resources>